<resources>
    <string name="app_name">oibsip_task3</string>
    <string name="const_e">e</string>
    <string name="const_pi">π</string>
    <string name="lparen">(</string>
    <string name="rparen">)</string>
    <string name="op_add">+</string>
    <string name="op_div">÷</string>
    <string name="op_fact">!</string>
    <string name="op_mul">×</string>
    <string name="op_pow"><i>x<sup><small>y</small></sup></i></string>
    <string name="op_sqrt">√</string>
    <string name="op_sub">-</string>
    <string name="eq">=</string>

    <string name="error_syntax">Error</string>
    <string name="dec_point">.</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="fun_cos">cos</string>
    <string name="fun_ln">ln</string>
    <string name="fun_log">log</string>
    <string name="fun_sin">sin</string>
    <string name="fun_tan">tan</string>
    <string name="clr">C</string>
    <string name="del">del</string>
</resources>