<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/square_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:text="@string/op_pow"
            android:onClick="onOpClick"
            android:fontFamily="sans-serif-light"/>
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/parenthesis_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="@dimen/pad_numeric_button_height"-->
<!--            style="@style/PadButtonStyle.Numeric"-->
<!--            android:onClick="onParenthesis"-->
<!--            android:text="( )"-->
<!--            android:layout_weight="0.25"/>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/division_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/op_div"
            android:onClick="onOpClick"
            android:layout_weight="0.25"/>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:src="@drawable/ic_baseline_backspace_24"
            android:onClick="onClearClick"
            android:layout_weight="0.5"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:onClick="onNumberClick"
            android:text="@string/digit_7" />
\
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:onClick="onNumberClick"
            android:text="@string/digit_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:text="@string/digit_9"
            android:onClick="onNumberClick"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiplication_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/op_mul"
            android:onClick="onOpClick"
            android:layout_weight="0.25"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/four_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit_4"
            android:onClick="onNumberClick"
            android:layout_weight="0.25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit_5"
            android:onClick="onNumberClick"
            android:layout_weight="0.25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:onClick="onNumberClick"
            android:text="@string/digit_6"
            android:layout_weight="0.25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/op_sub"
            android:onClick="onOpClick"
            android:layout_weight="0.25"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/one_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit_1"
            android:onClick="onNumberClick"
            android:layout_weight="0.25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/two_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit_2"
            android:onClick="onNumberClick"
            android:layout_weight="0.25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            style="@style/PadButtonStyle.Numeric"
            android:text="@string/digit_3"
            android:onClick="onNumberClick"
            android:layout_weight="0.25"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addition_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:onClick="onOpClick"
            android:text="@string/op_add"/>
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/sqrt_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="@dimen/pad_numeric_button_height"-->
<!--            style="@style/PadButtonStyle.Numeric"-->
<!--            android:text="@string/op_sqrt"-->
<!--            android:onClick="onOpClick"-->
<!--            android:layout_weight="0.25"/>-->
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/zero_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.5"
            android:text="@string/digit_0"
            android:onClick="onNumberClick"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/point_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:fontFamily="sans-serif-black"
            android:onClick="onPtClick"
            android:text="@string/dec_point" />
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/square_btn"-->
<!--            style="@style/PadButtonStyle.Numeric"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="@dimen/pad_numeric_button_height"-->
<!--            android:layout_weight="0.25"-->
<!--            android:text="@string/op_pow"-->
<!--            android:fontFamily="sans-serif-light"/>-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equals_btn"
            style="@style/PadButtonStyle.Numeric"
            android:layout_height="@dimen/pad_numeric_button_height"
            android:layout_weight="0.25"
            android:onClick="onEqClick"
            android:text="@string/eq"
            android:background="@color/color_30"
            android:textColor="@color/color_60"/>
    </TableRow>

</TableLayout>